<resources>
    <string name="app_name">Apollo Professor\'s Grade Book</string>
    <string name="app_name_title">Apollo</string>
    <string name="app_name_sub_title">Professor\'s Grade Book</string>
    <string name="app_version">Version 3.0</string>
    <string name="past">Past</string>
    <string name="current">Current</string>
    <string name="unknown">Unknown</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="days_mf">M-F</string>
    <string name="days_mwf">MWF</string>
    <string name="days_tth">TTh</string>
    <string name="days_mon">Mon</string>
    <string name="days_tue">Tue</string>
    <string name="days_wed">Wed</string>
    <string name="days_thu">Thu</string>
    <string name="days_fri">Fri</string>
    <string name="days_sat">Sat</string>
    <string name="days_sun">Sun</string>
    <string name="days_m">M</string>
    <string name="days_t">T</string>
    <string name="days_w">W</string>
    <string name="days_th">Th</string>
    <string name="days_f">F</string>
    <string name="days_s">S</string>
    <string name="days_su">Su</string>
    <string name="days_monday">Monday</string>
    <string name="days_tuesday">Tuesday</string>
    <string name="days_wednesday">Wednesday</string>
    <string name="days_thursday">Thursday</string>
    <string name="days_friday">Friday</string>
    <string name="days_saturday">Saturday</string>
    <string name="days_sunday">Sunday</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="day_activities">Today\'s Activities</string>
    <string name="week_activities">This Week\'s Activities</string>
    <string name="current_classes">Current Classes</string>
    <string name="past_classes">Past Classes</string>
    <string name="students">Students</string>
    <string name="settings">Settings</string>
    <string name="application_data">Application Data</string>
    <string name="academic_terms">Academic Terms</string>
    <string name="class_activities">Class Activities</string>
    <string name="default_time_start">Default Time Start</string>
    <string name="final_grade_calculation">Final Grade Calculation</string>
    <string name="student_name_display">Student Name Display</string>
    <string name="security">Security</string>
    <string name="lock_enabled">Lock Enabled</string>
    <string name="unlock_password">Unlock Password</string>
    <string name="details">Details</string>
    <string name="about_this_app">About Apollo</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="unlock_password_changed">Unlock password changed.</string>
    <string name="unlock_password_cleared">Unlock password cleared.</string>
    <string name="last_name_first_name">[Last Name], [First Name] [Middle Initial].</string>
    <string name="first_name_last_name">[First Name] [Middle Initial]. [Last Name]</string>
    <string name="student_name_display_changed">Student name display changed.</string>
    <string name="default_time_start_changed">Default time start changed.</string>
    <string name="remove_academic_term">Remove academic term?</string>
    <string name="remove">Remove</string>
    <string name="academic_term_removed">Academic term removed.</string>
    <string name="new_academic_term">New academic term?</string>
    <string name="add">Add</string>
    <string name="academic_term_added">Academic term added.</string>
    <string name="update_academic_term">Update academic term?</string>
    <string name="save_changes">Save Changes</string>
    <string name="academic_term_updated">Academic term updated.</string>
    <string name="please_enter_an_academic_term">Please enter an academic term!</string>
    <string name="remove_class_activity">Remove class activity?</string>
    <string name="class_activity_removed">Class activity removed.</string>
    <string name="new_class_activity">New class activity?</string>
    <string name="class_activity_added">Class activity added.</string>
    <string name="update_class_activity">Update class activity?</string>
    <string name="class_activity_updated">Class activity updated.</string>
    <string name="please_enter_a_class_activity">Please enter a class activity!</string>
    <string name="students_label">Students:</string>
    <string name="class_activities_label">Class Activities:</string>
    <string name="colon">:</string>
    <string name="new_class">New class?</string>
    <string name="update_class">Update class?</string>
    <string name="code_hint">Code</string>
    <string name="description_hint">Description</string>
    <string name="academic_term_hint">Academic Term</string>
    <string name="year_hint">Year</string>
    <string name="please_enter_a_class_code">Please enter a class code!</string>
    <string name="class_added">Class added.</string>
    <string name="class_updated">Class updated.</string>
    <string name="lock_class">Lock Class</string>
    <string name="unlock_class">Unlock Class</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="ellipsis">...</string>
    <string name="class_password_removed">Class password removed.</string>
    <string name="class_password_applied">Class password applied.</string>
    <string name="class_schedule">Schedule</string>
    <string name="grade_breakdown">Grade Breakdown</string>
    <string name="notes">Notes</string>
    <string name="new_class_schedule_fab_label">New Schedule</string>
    <string name="new_grade_breakdown_fab_label">New Grade Breakdown</string>
    <string name="new_note_fab_label">New Note</string>
    <string name="info_tab">Info</string>
    <string name="items_tab">Activities</string>
    <string name="students_tab">Students</string>
    <string name="delete_class">Delete Class</string>
    <string name="remove_class_schedule">Remove schedule?</string>
    <string name="class_schedule_removed">Schedule removed.</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="days">Days</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="campus">Campus</string>
    <string name="new_class_schedule">New schedule?</string>
    <string name="update_class_schedule">Update schedule?</string>
    <string name="class_schedule_added">Schedule added.</string>
    <string name="class_schedule_updated">Schedule updated.</string>
    <string name="clear">Clear</string>
    <string name="set">Set</string>
    <string name="please_input_a_time_start">Please input a time start!</string>
    <string name="total">Total</string>
    <string name="remove_class_grade_breakdown">Remove class grade breakdown?</string>
    <string name="class_grade_breakdown_removed">Class grade breakdown removed.</string>
    <string name="new_class_grade_breakdown">New class grade breakdown?</string>
    <string name="update_class_grade_breakdown">Update class grade breakdown?</string>
    <string name="item_type_hint">Class Activity</string>
    <string name="percentage_hint">Percentage</string>
    <string name="class_grade_breakdown_added">Class grade breakdown added.</string>
    <string name="class_grade_breakdown_updated">Class grade breakdown updated.</string>
    <string name="please_select_a_class_activity">Please select a class activity!</string>
    <string name="please_enter_a_breakdown_percentage">Please enter a breakdown percentage!</string>
    <string name="new_class_note">New class note?</string>
    <string name="update_class_note">Update class note?</string>
    <string name="remove_class_note">Remove class note?</string>
    <string name="note_date_hint">Note Date</string>
    <string name="note_char_limit_hint">(140 characters limit)</string>
    <string name="please_input_a_note_date">Please input a note date!</string>
    <string name="please_write_a_note">Please write a note!</string>
    <string name="characters_left">character(s) left.</string>
    <string name="class_note_added">Class note added.</string>
    <string name="class_note_updated">Class note updated.</string>
    <string name="class_note_removed">Class note removed.</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="perfect_score_label">Perfect Score:</string>
    <string name="submission_due_date_label">Submission Due Date:</string>
    <string name="due_date_label">Due Date:</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_class_code">Code</string>
    <string name="action_sort_class_description">Description</string>
    <string name="action_sort_year">Year</string>
    <string name="action_sort_academic_term">Academic Term</string>
    <string name="action_sort_item_description">Description</string>
    <string name="action_sort_item_date">Date</string>
    <string name="action_sort_item_type">Activity</string>
    <string name="action_sort_check_attendance">Check Attendance</string>
    <string name="action_sort_perfect_score">Perfect Score</string>
    <string name="action_sort_submission_due_date">Submission Due Date</string>
    <string name="please_enter_an_activity_description">Please enter an activity description!</string>
    <string name="new_class_item">New activity?</string>
    <string name="item_date_hint">Activity Date</string>
    <string name="class_description_hint">Description</string>
    <string name="check_attendance_check_box_label">Check attendance?</string>
    <string name="record_scores_check_box_label">Record scores?</string>
    <string name="perfect_score_hint">Perfect Score</string>
    <string name="record_submissions_check_box_label">Record submissions?</string>
    <string name="submission_due_date_hint">Submission Due Date</string>
    <string name="please_enter_a_perfect_score">Please enter a perfect score!</string>
    <string name="please_input_a_submission_due_date">Please input a submission due date!</string>
    <string name="percent_symbol">%</string>
    <string name="class_item_added">Activity added.</string>
    <string name="class_item_updated">Activity updated.</string>
    <string name="class_item_removed">Activity removed.</string>
    <string name="update_class_item">Update activity?</string>
    <string name="delete_class_item">Delete Activity</string>
    <string name="action_sort_last_name">Last Name</string>
    <string name="action_sort_first_name">First Name</string>
    <string name="space_symbol">" "</string>
    <string name="activity_info_tab">Activity Info</string>
    <string name="records_tab">Records</string>
    <string name="summary">Summary</string>
    <string name="attendance_present">Present</string>
    <string name="attendance_absent">Absent</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="middle_name_hint">Middle Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="contact_number_hint">Contact Number</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="developer_name">Developer:</string>
    <string name="poly_bug">Poly Bug</string>
    <string name="developer_email">Email:</string>
    <string name="gmail">polybugger@gmail.com</string>
    <string name="app_site">App Website:</string>
    <string name="appengine_site">https://apollo-1263.appspot.com/</string>
    <string name="translator">Translated By:</string>
    <string name="translator_name">宇治原久美子</string>
</resources>