<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="11"
        app:showAsAction="always" >

        <menu>

            <item
                android:id="@+id/action_sort_item_description"
                android:title="@string/action_sort_item_description" />

            <item
                android:id="@+id/action_sort_item_date"
                android:title="@string/action_sort_item_date" />

            <item
                android:id="@+id/action_sort_item_type"
                android:title="@string/action_sort_item_type" />

            <item
                android:id="@+id/action_sort_check_attendance"
                android:title="@string/action_sort_check_attendance" />

            <item
                android:id="@+id/action_sort_perfect_score"
                android:title="@string/action_sort_perfect_score" />

            <item
                android:id="@+id/action_sort_submission_due_date"
                android:title="@string/action_sort_submission_due_date" />

        </menu>

    </item>

</menu>
