<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_lock"
        android:orderInCategory="996"
        android:title="@string/lock_class"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unlock"
        android:orderInCategory="997"
        android:title="@string/unlock_class"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="998"
        android:title="@string/delete_class"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="999"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
