<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/background_layout"
        android:elevation="@dimen/low_elevation"
        android:background="@drawable/bg_rounded_rect_0"
        android:layout_margin="@dimen/dialog_fragment_margin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/recycler_view_content_padding_top"
            android:paddingBottom="@dimen/recycler_view_content_padding_bottom"
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_nav_header" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:text="@string/developer_name"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/poly_bug"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_email"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:text="@string/app_site"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appengine_site"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:text="@string/translator"
            android:textStyle="bold"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:paddingLeft="@dimen/recycler_view_content_padding_left"
            android:paddingRight="@dimen/recycler_view_content_padding_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translator_name"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
