<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/dialog_fragment_padding_top"
        android:paddingRight="@dimen/dialog_fragment_padding_right"
        android:paddingBottom="@dimen/dialog_fragment_padding_bottom"
        android:paddingLeft="@dimen/dialog_fragment_padding_left">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/time_start_button"
                android:hint="@string/time_start"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="@dimen/normal_text_size" />

            <Button
                android:id="@+id/time_end_button"
                android:hint="@string/time_end"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textSize="@dimen/normal_text_size" />

        </LinearLayout>

        <TextView
            android:id="@+id/error_text_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/edit_text_text_view_padding_left"
            android:paddingRight="@dimen/edit_text_text_view_padding_right"
            android:textColor="@color/color_error"
            android:textSize="@dimen/small_text_size" />

        <Button
            android:id="@+id/days_button"
            android:hint="@string/days"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/edit_text_spacer_top"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/room_edit_text"
            android:hint="@string/room"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/edit_text_spacer_top"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/building_edit_text"
            android:hint="@string/building"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/edit_text_spacer_top"
            android:textSize="@dimen/normal_text_size" />

        <EditText
            android:id="@+id/campus_edit_text"
            android:hint="@string/campus"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/edit_text_spacer_top"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
